--- a/src/elements/my-socials.html
+++ b/src/elements/my-socials.html
@@ -32,6 +32,14 @@
             static get is() {
                 return 'my-socials';
             }
+
+            static get properties() {
+                return {
+                    // This shouldn't be neccessary, but the Analyzer isn't picking up
+                    // Polymer.Element#rootPath
+                    rootPath: String
+                };
+            }
         }
 
         window.customElements.define(MySocials.is, MySocials);
