--- a/src/elements/my-posts-list.html
+++ b/src/elements/my-posts-list.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
+
 <link rel="import" href="big-list-style.html">
 <link rel="import" href="content-utils.html">
 
@@ -27,24 +28,20 @@
         </style>
 
         <ul class="big-list">
-            <dom-repeat items="[[posts]]" as="post">
-                <template>
-                    <li>
-                        <a href="[[rootPath]]posts/[[post.id]]">
-                            <h3>[[post.title]]</h3>
-                            <span class="datetime">[[post.datetime]]</span>
-                            <span class="tags">
-                                <dom-repeat items="[[post.tags]]" as="tag">
-                                    <template>
-                                        <span class="tag">[[tag]]</span>
-                                    </template>
-                                </dom-repeat>
-                            </span>
-                            <p class="summary">[[post.summary]]</p>
-                        </a>
-                    </li>
-                </template>
-            </dom-repeat>
+            <template is="dom-repeat" items="[[posts]]" as="post">
+                <li>
+                    <a href="[[rootPath]]posts/[[post.id]]">
+                        <h3>[[post.title]]</h3>
+                        <span class="datetime">[[post.datetime]]</span>
+                        <span class="tags">
+                            <template is="dom-repeat" items="[[post.tags]]" as="tag">
+                                <span class="tag">[[tag]]</span>
+                            </template>
+                        </span>
+                        <p class="summary">[[post.summary]]</p>
+                    </a>
+                </li>
+            </template>
         </ul>
     </template>
 
@@ -59,13 +56,17 @@
                     posts: {
                         type: Array,
                         readOnly: true
-                    }
+                    },
+
+                    // This shouldn't be neccessary, but the Analyzer isn't picking up
+                    // Polymer.Element#rootPath
+                    rootPath: String
                 };
             }
 
             ready() {
                 super.ready();
-                fetch(`${this.rootPath}data-api/posts/index.json`)
+                fetch(`${this.rootPath}api/posts/index.json`)
                     .then(response => response.json())
                     .then(posts => {
                         posts.forEach(post => {
