--- a/src/elements/my-projects-details.html
+++ b/src/elements/my-projects-details.html
@@ -1,5 +1,6 @@
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
 <link rel="import" href="../bower_components/marked-element/marked-element.html">
+
 <link rel="import" href="content-utils.html">
 
 <dom-module id="my-projects-details">
@@ -68,8 +69,8 @@
             </section>
             <section class="images">
                 <template is="dom-repeat" items="[[projectImages]]" as="image">
-                    <a href="[[rootPath]]images/projects/[[project]]/[[image.name]].png" target="_blank">
-                        <img src="[[rootPath]]images/projects/[[project]]/[[image.name]]_thumb.png" alt="[[image.alt]]">
+                    <a href="[[image.url]]" target="_blank">
+                        <img src="[[image.thumbUrl]]" alt="[[image.alt]]">
                     </a>
                 </template>
             </section>
@@ -122,7 +123,11 @@
                     projectSources: {
                         type: Array,
                         readOnly: true
-                    }
+                    },
+
+                    // This shouldn't be neccessary, but the Analyzer isn't picking up
+                    // Polymer.Element#rootPath
+                    rootPath: String
                 };
             }
 
@@ -131,13 +136,17 @@
                     return;
                 }
 
-                fetch(`${this.rootPath}data-api/projects/${project}.md`)
+                fetch(`${this.rootPath}api/projects/${project}.md`)
                     .then(response => response.text())
-                    .then(project => {
-                        const data = window.kuehle.parseMarkdown(project);
+                    .then(projectData => {
+                        const data = window.kuehle.parseMarkdown(projectData);
                         this._setProjectTitle(data.metadata.title);
                         this._setProjectTags(data.metadata.tags);
-                        this._setProjectImages(data.metadata.images);
+                        this._setProjectImages(data.metadata.images.map(image => {
+                            image.url = `${this.rootPath}images/projects/${project}/${image.name}.png`;
+                            image.thumbUrl = `${this.rootPath}images/projects/${project}/${image.name}_thumb.png`;
+                            return image;
+                        }));
                         this._setProjectSources(data.metadata.getit);
                         this._setProjectDescription(data.content);
                     });
