--- a/src/elements/my-view-posts.html
+++ b/src/elements/my-view-posts.html
@@ -1,5 +1,6 @@
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
 <link rel="import" href="../bower_components/app-route/app-route.html">
+
 <link rel="import" href="my-posts-details.html">
 <link rel="import" href="my-posts-list.html">
 
@@ -11,11 +12,13 @@
             }
         </style>
 
-        <app-route
-                route="{{route}}"
-                pattern="/:post"
-                active="{{showPostDetails}}"
-                data="{{routeData}}"></app-route>
+        <template is="dom-if" if="[[active]]" restamp>
+            <app-route
+                    route="{{route}}"
+                    pattern="/:post"
+                    active="{{showPostDetails}}"
+                    data="{{routeData}}"></app-route>
+        </template>
 
         <template is="dom-if" if="[[!showPostDetails]]">
             <my-posts-list></my-posts-list>
@@ -33,6 +36,7 @@
 
             static get properties() {
                 return {
+                    active: Boolean,
                     route: Object,
                     routeData: Object,
                     showPostDetails: Boolean,
