--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
-    <meta name="theme-color" content="#3f51b5">
+    <meta name="theme-color" content="#c7c7c7">
 
     <title>Jan Kühle</title>
 
@@ -20,13 +20,13 @@
                 });
             }
 
-            window.WebFontConfig = {google: {families: ['Pontano+Sans::latin'] } };
+            window.WebFontConfig = { google: { families: ['Pontano+Sans::latin'] } };
         })();
     </script>
     <script src="bower_components/webcomponentsjs/webcomponents-loader.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/webfont/1/webfont.js" async></script>
 
-    <link rel="import" href="src/my-app.html">
+    <link rel="import" href="elements/my-app.html">
 
     <style>
         body {
