--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
     <meta name="theme-color" content="#c7c7c7">
 
-    <title>Jan Kühle</title>
-
     <base href="/">
+    <link rel="shortcut icon" href="favicon.ico"/>
+
+    <title>Jan Kühle</title>
 
     <script>
         (function () {
