--- a/src/elements/my-posts-list.html
+++ b/src/elements/my-posts-list.html
@@ -20,6 +20,7 @@
             }
 
             .tag {
+                display: inline-block;
                 padding: 2px 5px;
                 background-color: #ccc;
                 margin: 3px;
