--- a/src/elements/my-projects-list.html
+++ b/src/elements/my-projects-list.html
@@ -13,16 +13,21 @@
             img {
                 width: 120px;
                 height: 120px;
-                margin-right: 15px;
                 float: left;
+            }
+
+            .description {
+                margin-left: 135px;
             }
 
             .tags {
                 margin-top: 15px;
+                margin-left: 135px;
                 font-size: 0.8em;
             }
 
             .tag {
+                display: inline-block;
                 padding: 2px 5px;
                 background-color: #ccc;
                 margin: 3px;
@@ -40,7 +45,7 @@
                     <a href="[[rootPath]]projects/[[project.id]]">
                         <h3>[[project.title]]</h3>
                         <img src="[[rootPath]]images/projects/[[project.id]]/icon_large.png" alt="">
-                        <div>[[project.short_description]]</div>
+                        <div class="description">[[project.short_description]]</div>
                         <div class="tags">
                             <template is="dom-repeat" items="[[project.tags]]" as="tag">
                                 <span class="tag">[[tag]]</span>
