Add Stack Overflow to socials, remove Facebook instead.

--- a/src/elements/my-socials.html
+++ b/src/elements/my-socials.html
@@ -21,8 +21,8 @@
 
         <aside>
             <a href="https://github.com/frigus02"><img src="[[rootPath]]images/github.png" alt="GitHub"></a>
+            <a href="https://stackoverflow.com/users/1798215/jan"><img src="[[rootPath]]images/stack-overflow.png" alt="Stack Overflow"></a>
             <a href="https://plus.google.com/+JanKühle/about"><img src="[[rootPath]]images/google-plus.png" alt="Google+"></a>
-            <a href="https://www.facebook.com/jkuehle90"><img src="[[rootPath]]images/facebook.png" alt="Facebook"></a>
             <a href="https://www.xing.com/profile/Jan_Kuehle2"><img src="[[rootPath]]images/xing.png" alt="XING"></a>
         </aside>
     </template>
