--- a/src/elements/my-view-impress.html
+++ b/src/elements/my-view-impress.html
@@ -20,9 +20,8 @@
         <section>
             <h3>Credits</h3>
             <ul>
-                <li>Social media icons: <a href="https://www.iconfinder.com/iconsets/social-buttons-2">Social Buttons by Aha-Soft Team</a></li>
+                <li>Social media icons: <a href="https://www.iconfinder.com/iconsets/social-flat-rounded-rects">Social Flat Rounded Rects by Aha-Soft</a></li>
                 <li>Arrow to picture of me: <a href="http://openclipart.org/detail/92389/arrow-by-nadsud">nadsud</a></li>
-                <li>Slideshow plugin for project images: <a href="http://dropthebit.com/demos/photobox/">Photobox</a></li>
             </ul>
         </section>
     </template>
