--- a/src/elements/my-socials.html
+++ b/src/elements/my-socials.html
@@ -8,6 +8,10 @@
                 text-align: center;
             }
 
+            a {
+                display: inline-block;
+            }
+
             @media (min-width: 600px) {
                 aside {
                     margin: 0;
@@ -20,10 +24,10 @@
         </style>
 
         <aside>
-            <a href="https://github.com/frigus02"><img src="[[rootPath]]images/github.png" alt="GitHub"></a>
-            <a href="https://stackoverflow.com/users/1798215/jan"><img src="[[rootPath]]images/stack-overflow.png" alt="Stack Overflow"></a>
-            <a href="https://plus.google.com/+JanKühle/about"><img src="[[rootPath]]images/google-plus.png" alt="Google+"></a>
-            <a href="https://www.xing.com/profile/Jan_Kuehle2"><img src="[[rootPath]]images/xing.png" alt="XING"></a>
+            <a href="https://github.com/frigus02" title="GitHub"><img src="[[rootPath]]images/github.png" alt="GitHub"></a>
+            <a href="https://stackoverflow.com/users/1798215/jan" title="Stack Overflow"><img src="[[rootPath]]images/stack-overflow.png" alt="Stack Overflow"></a>
+            <a href="https://plus.google.com/+JanKühle/about" title="Google+"><img src="[[rootPath]]images/google-plus.png" alt="Google+"></a>
+            <a href="https://www.xing.com/profile/Jan_Kuehle2" title="XING"><img src="[[rootPath]]images/xing.png" alt="XING"></a>
         </aside>
     </template>
 
