--- a/src/index.html
+++ b/src/index.html
@@ -20,19 +20,20 @@
                     navigator.serviceWorker.register(baseUrl + 'service-worker.js');
                 });
             }
-
-            window.WebFontConfig = { google: { families: ['Pontano+Sans::latin'] } };
         })();
     </script>
-    <script src="bower_components/webcomponentsjs/webcomponents-loader.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/webfont/1/webfont.js" async></script>
+    <script src="bower_components/webcomponentsjs/webcomponents-loader.js" defer></script>
 
     <link rel="import" href="elements/my-app.html">
 
+    <link rel="preload" href="https://fonts.gstatic.com/s/pontanosans/v4/gTHiwyxi6S7iiHpqAoiE3D0LW-43aMEzIO6XUTLjad8.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="https://fonts.gstatic.com/s/pontanosans/v4/gTHiwyxi6S7iiHpqAoiE3Ogdm0LZdjqr5-oayXSOefg.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pontano+Sans">
     <style>
         body {
             margin: 0;
             font-family: 'Pontano Sans', 'Helvetica', sans-serif;
+            font-display: optional;
             min-height: 100vh;
             background-color: #f0f0f0;
             background-image: linear-gradient(-45deg, #f0f0f0, #c7c7c7);
