--- a/src/elements/my-app.html
+++ b/src/elements/my-app.html
@@ -59,6 +59,8 @@
     </template>
 
     <script>
+        Polymer.setPassiveTouchGestures(true);
+
         class MyApp extends Polymer.Element {
             static get is() {
                 return 'my-app';
