Remove G+ and XING and add Twitter social instead

--- a/src/elements/my-socials.html
+++ b/src/elements/my-socials.html
@@ -26,8 +26,7 @@
         <aside>
             <a href="https://github.com/frigus02" title="GitHub"><img src="[[rootPath]]images/github.png" alt="GitHub"></a>
             <a href="https://stackoverflow.com/users/1798215/jan" title="Stack Overflow"><img src="[[rootPath]]images/stack-overflow.png" alt="Stack Overflow"></a>
-            <a href="https://plus.google.com/+JanKühle/about" title="Google+"><img src="[[rootPath]]images/google-plus.png" alt="Google+"></a>
-            <a href="https://www.xing.com/profile/Jan_Kuehle2" title="XING"><img src="[[rootPath]]images/xing.png" alt="XING"></a>
+            <a href="https://twitter.com/frigus02" title="Twitter"><img src="[[rootPath]]images/twitter.png" alt="Twitter"></a>
         </aside>
     </template>
 
