Use https for all external links and resources

--- a/src/elements/my-projects-details.html
+++ b/src/elements/my-projects-details.html
@@ -77,7 +77,7 @@
                 <template is="dom-repeat" items="[[projectSources]]" as="source">
                     <a href="[[source.url]]" target="_blank">
                         <template is="dom-if" if="[[_isGooglePlay(source)]]">
-                            <img src="http://www.android.com/images/brand/get_it_on_play_logo_small.png" alt="Get it on Google Play">
+                            <img src="https://www.android.com/images/brand/get_it_on_play_logo_small.png" alt="Get it on Google Play">
                         </template>
                         <template is="dom-if" if="[[_isGit(source)]]">
                             <img src="[[rootPath]]images/projects/git.png" alt="Get the source">
