--- a/src/elements/my-view-impress.html
+++ b/src/elements/my-view-impress.html
@@ -21,7 +21,7 @@
             <h3>Credits</h3>
             <ul>
                 <li>Social media icons: <a href="https://www.iconfinder.com/iconsets/social-flat-rounded-rects">Social Flat Rounded Rects by Aha-Soft</a></li>
-                <li>Arrow to picture of me: <a href="http://openclipart.org/detail/92389/arrow-by-nadsud">nadsud</a></li>
+                <li>Arrow to picture of me: <a href="https://openclipart.org/detail/92389/arrow-by-nadsud">nadsud</a></li>
             </ul>
         </section>
     </template>
