--- a/src/elements/my-view-impress.html
+++ b/src/elements/my-view-impress.html
@@ -22,6 +22,7 @@
             <ul>
                 <li>Social media icons: <a href="https://www.iconfinder.com/iconsets/social-flat-rounded-rects">Social Flat Rounded Rects by Aha-Soft</a></li>
                 <li>Arrow to picture of me: <a href="https://openclipart.org/detail/92389/arrow-by-nadsud">nadsud</a></li>
+                <li>Google Play and the Google Play logo are trademarks of Google LLC.</li>
             </ul>
         </section>
     </template>
