Add rendering and watching of static files and normal pages

--- a/site/pages/_layout.html
+++ b/site/pages/_layout.html
@@ -11,7 +11,7 @@
     <title>Jan Kühle</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pontano+Sans">
-    <link rel="stylesheet" href="styles/{{ .Stylesheet }}">
+    <link rel="stylesheet" href="{{ .Stylesheet }}">
 </head>
 <body>
     <header class="header">
