--- a/site/pages/projects/_details.html
+++ b/site/pages/projects/_details.html
@@ -11,19 +11,19 @@ title: "{{ .Title }}"
         {{ .Content }}
     </section>
     <section class="projects-details-tags">
-        {{- range _, $tag := .Tags -}}
+        {{- range $index, $tag := .Tags }}
         <span class="projects-details-tag">{{ $tag }}</span>
-        {{- end -}}
+        {{- end }}
     </section>
     <section class="projects-details-images">
-        {{- range _, $image := .Images -}}
+        {{- range $index, $image := .Images }}
         <a href="{{ $image.Url }}" target="_blank">
             <img src="{{ $image.ThumbUrl }}" alt="{{ $image.Alt }}">
         </a>
-        {{- end -}}
+        {{- end }}
     </section>
     <section class="projects-details-getit">
-        {{- range _, $source := .Sources -}}
+        {{- range $index, $source := .Sources }}
         <a href="{{ $source.URL }}" target="_blank">
             {{- if eq $source.Type "googleplay" -}}
             <img src="images/projects/google-play.png" alt="Get it on Google Play">
@@ -37,6 +37,6 @@ title: "{{ .Title }}"
             <img src="images/projects/tryit.png" alt="Try it in the browser">
             {{- end -}}
         </a>
-        {{- end -}}
+        {{- end }}
     </section>
 </article>
