--- a/site/pages/projects/index.html
+++ b/site/pages/projects/index.html
@@ -3,19 +3,19 @@ title: "Projects"
 ---
 
 <ul class="big-list">
-    {{- range _, $project := .Projects -}}
+    {{- range $index, $project := .Projects }}
     <li>
         <a href="/projects/{{ $project.ID }}">
             <h3>{{ $project.Title }}</h3>
             <img class="projects-icon" src="images/projects/{{ $project.ID }}/icon_large.png" alt="">
             <div class="projects-description">{{ $project.ShortDescription }}</div>
             <div class="projects-tags">
-                {{- range _, $tag := $project.Tags -}}
+                {{- range $index, $tag := $project.Tags }}
                 <span class="projects-tag">{{ $tag }}</span>
-                {{- end -}}
+                {{- end }}
             </div>
             <div class="projects-clear"></div>
         </a>
     </li>
-    {{- end -}}
+    {{- end }}
 </ul>
