--- a/site/pages/_layout.html
+++ b/site/pages/_layout.html
@@ -18,7 +18,7 @@
         <h1><a href="/">Jan Kühle</a></h1>
         {{- if eq .ParentID "posts" "projects" -}}
         <h2><a href="/{{ .ParentID }}">{{ .ParentTitle }}</a></h2>
-        {{- else if ne .ID "index" -}}
+        {{- else if ne .ID "" -}}
         <h2><a href="/{{ .ID }}">{{ .Title }}</a></h2>
         {{- end -}}
     </header>
