--- a/site/pages/index.html
+++ b/site/pages/index.html
@@ -2,7 +2,7 @@
 title: "About"
 ---
 
-<img class="index-me" src="images/me.jpg" alt="A picture of me">
+<img class="index-me" src='{{ index .StaticFiles "images/me.jpg" }}' alt="A picture of me">
 
 <div class="index-about">
     <p>Hi, this is me.</p>
