--- a/site/pages/projects/index.html
+++ b/site/pages/projects/index.html
@@ -6,11 +6,11 @@ title: "Projects"
     {{- range $project := .Projects }}
     <li>
         <a href="/projects/{{ $project.ID }}">
-            <h3>{{ $project.Title }}</h3>
-            <img class="projects-icon" src='{{ index $.StaticFiles (printf "images/projects/%s/icon_large.png" $project.ID) }}' alt="">
-            <div class="projects-description">{{ $project.ShortDescription }}</div>
+            <h3>{{ $project.Metadata.Title }}</h3>
+            <img class="projects-icon" src='{{ index $.StaticFiles (printf "data/projects/%s/icon_large.png" $project.ID) }}' alt="">
+            <div class="projects-description">{{ $project.Metadata.ShortDescription }}</div>
             <div class="projects-tags">
-                {{- range $tag := $project.Tags }}
+                {{- range $tag := $project.Metadata.Tags }}
                 <span class="projects-tag">{{ $tag }}</span>
                 {{- end }}
             </div>
