--- a/site/pages/_layout.html
+++ b/site/pages/_layout.html
@@ -6,7 +6,8 @@
     <meta name="theme-color" content="#c7c7c7">
 
     <base href="/">
-    <link rel="shortcut icon" href="favicon.ico"/>
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="alternate" type="application/atom+xml" href="feeds/posts">
 
     <title>Jan Kühle</title>
 
