Remove service worker

--- a/site/pages/_layout.html
+++ b/site/pages/_layout.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="{{ $file }}">
     {{- end }}
     {{- end }}
+
+    <script src='{{ index .StaticFiles "scripts/no-sw.js" }}'></script>
 </head>
 <body>
     <header class="header">
