Fix arrow not being displayed

--- a/site/pages/index.html
+++ b/site/pages/index.html
@@ -5,6 +5,7 @@ title: "About"
 <img class="index-me" src='{{ index .StaticFiles "images/me.jpg" }}' alt="A picture of me">
 
 <div class="index-about">
+    <img src='{{ index .StaticFiles "images/about_arrow.png" }}' alt="">
     <p>Hi, this is me.</p>
     <p>I'm a passionate full stack web developer with an additional interest in Android apps.</p>
 </div>
